# Raven.ANPR

./: .gitignore  CMakeLists.txt  CMakeSettings.json  build-test-dockers.ps1  dockerfile.linux  dockerfile.raspberrypi3  run-linux-test-docker.ps1  run-raspberrypi3-test-docker.ps1
Raven.ANPR.Recognizer/: CMakeLists.txt  FindWindowsSDK.cmake  PlatePerister.cpp  PlatePersister.h  PlateRecognizer.cpp  PlateRecognizer.h  Raven.ANPR.Recognizer.cpp  Raven.ANPR.Recognizer.h  fetch_cpp_client.cmake
Raven.ANPR.Recognizer/Exceptions/: InvalidImageException.hpp
Raven.ANPR.Recognizer/persister/: plate_record.hpp
Raven.ANPR.Recognizer/recognizer/: base_plate_finder_strategy.hpp  if_char.hpp  plate_finder_by_geometry.hpp  plate_finder_by_rectangle.hpp  plate_recognizer.cpp  plate_recognizer.h  possible_plate.hpp
Raven.ANPR.Tests/: AdvancedTests.cpp  BasicTests.cpp  BoostTestHelper.cmake  CMakeLists.txt  PlateRecognizerTests.cpp  tests.cpp  tests.h
